# technical-documentations

./: .checkmake.ini  .gitignore  .gitlint  .hadolint.yaml  .pre-commit-config.yaml  .pymarkdown  .yamllint  BOOTSTRAP_IMPLEMENTATION_SUMMARY.md  BUILD_SYSTEM.md  CHANGELOG.md  CHANGES_SUMMARY.md  COLOR_FIX_SUMMARY.md  COLOR_PALETTE_GUIDE.md  COLOR_SYSTEM_README.md  COMPLETE_SOLUTION.md  DARK_MODE_FIX_SUMMARY.md  DARK_MODE_GUIDE.md  DIAGRAM_SUMMARY.md  DUAL_THEME_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK-START.md  README.md  THEME_TOGGLE_FIX.md  add-styling.py  build-all.sh  build-colors.py  build-diagrams.py  build-html.py  build.sh  color-palette-demo.html  color-palette-demo.typ  colors.css  colors.json  docker-compose.yaml  podman-compose.yml  post-process-html.py  pyproject.toml  stakeholder-example-clean.html  stakeholder-example-full.html  (+12 more)
.cursor/: VERSION_MANAGEMENT.md  git-workflow.md  github-actions.md  issue-2-implementation-summary.md  issue-template.md  pr-template.md  python.md  release-process.md  typst.md
.devcontainer/: .gitignore  Containerfile  MIGRATION.md  README.md  SSH_SIGNING_SETUP.md  add-github-signing-key.sh  devcontainer.json  initialize.sh  post-attach.sh  post-create.sh  post-start.sh  select-signing-key.sh  setup-github-signing.sh  setup-user-conf.sh
.github/: RENOVATE_SETUP.md  renovate-external-dependencies.json  renovate-internal-containers.json  renovate-internal-dependencies.json  renovate.json
build-hooks/: pre-commit
diagrams/: state-machine.typ
docs/: BOOTSTRAP_STYLING.md  BUILD_SYSTEM.md  main.typ  (+5 more)
(+122 files in other folders)
