[project]
name = "workspace"
version = "0.1.0"
description = "workspace - Python project"
requires-python = ">=3.12"
dependencies = [
    "pyjson5>=2.0.0",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "gitlint==0.19.1",
    "pre-commit==4.3.0",
    "ruff==0.14.3",
    "sembr>=0.2.3",
]
test = [
    "pytest==8.4.1",
    "pytest-cov==6.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "N", "UP", "B", "C4", "SIM", "TCH", "PTH"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["example/python-project/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=example/python-project/src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["example/python-project/src"]
omit = ["*/tests/*", "*/__pycache__/*"]
